tm-planner/assets/css/tm-planner.css
#help-info,
#optc-db-info {
    font-size: 13px;
    padding: 5px;
}

#team-6-info,
#multi-class-mode-label {
    font-size: 10px;
}

:disabled {
    cursor: not-allowed;
}

#server-setting-div {
    margin-top: 5px;
    margin-bottom: 5px;
}

.server-radio-div {
    display: inline-block;
    margin-left: 10px;
    margin-right: 10px;
}

.jpn-tm {
    display: none;
}

.div_x,
#div_1_2x_tm_rr,
#div_1_2x_tm {
    display: none;
}

#info_1_2x_alt {
    display: none;
}

#nakama-info {
    margin-top: 20px;
    padding: 5px;
    text-align: center;
}

@media (max-width: 768px) {
    .col-margin {
        margin-bottom: 5px;
    }
}

#unit-detail-class1,
#unit-detail-class2 {
    display: inline-block;
    height: 25px;
    margin: 5px;
    width: 25px;
}

.booster-info,
.confirm-save,
#unit-detail-captain-ability,
#unit-detail-swap,
#unit-detail-special,
#unit-detail-sailor {
    font-size: 13px;
    margin-bottom: 10px;
}

.booster {
    cursor: pointer;
}

.booster-div {
    margin-bottom: 20px;
    min-height: 40px;
}

#ambush-team {
    display: none;
}

.team-slot,
.ambush-team-slot {
    background-image: url('/tm-planner/assets/img/add.png');
    background-size: 100%;
    cursor: pointer;
    float: left;
    height: 40px;
    margin: 1px;
    width: 40px;
}

#add-button {
    background-image: url('/tm-planner/assets/img/add.png');
    background-size: 100%;
    display: inline-block;
    height: 40px;
    margin: 1px;
    width: 40px;
}

#help-button {
    margin: 5px;
    width: 100%;
}

.remove-button-el,
.available-units-el,
.units-in-team-el,
.units-assigned-el,
.unit-detail-el {
    display: none;
}

.select-modal-unit {
    cursor: pointer;
    margin: 1px;
}

.assigned-dh {
    cursor: pointer;
}

.assigned-dh > img {
    filter: grayscale(100%);
    -webkit-filter: grayscale(100%);
}

.booster-clone > img {
    filter: brightness(0.5);
    -webkit-filter: brightness(0.5);
}

#export-url-div,
#read-only-button-div {
    display: none;
}

.type-filtered,
.class-filtered,
.lb-filtered {
    opacity: 0.3;
}

.class-decorate {
    background-size: cover;
    display: inline-block;
    height: 13px;
    margin-right: 3px;
    width: 13px;
}

/* Overwrite Bootstrap */
.badge {
    font-size: inherit;
}

#tm-team-sets > div {
    width: 100%;
    align-items: flex-end;
}

.team {
    padding-left: 25px;
    padding-right: 0;
}

.fixed-teams {
    width: 100%;
    background: var(--bg-color-main);
    position: fixed;
    bottom: 0;
    z-index: 10;
    border-top: 1px solid;
    padding-bottom: 10px;
}

@media (max-width: 767px) {
    .fixed-teams div#tm-team-sets > div.row {
        display: flex;
        flex-flow: nowrap;
        overflow: scroll;
    }
}

#team-hints {
    float: left;
    color: #ffc107;
    display: none;
}

@media (min-width: 768px) {
    #team-hints {
        display: none!important;
    }
}

.team .row div {
    padding-right: 0;
}

.booster.ui-draggable-dragging {
    z-index: 11;
}

.expand-collapse-icons-row {
    text-align: right;
}

.cal-button {
    white-space: normal;
}

button.pts-button,
button.cal-button {
    background: var(--bg-color-team-button);
    color: aliceblue;
}

button.pts-button:hover,
button.cal-button:hover {
    color: var(--font-highlight-dl-button);
    background-color: var(--bg-highlight-dl-button);
    border-color: var(--bg-highlight-dl-button);
}

